--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,21 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<% layout("/layouts/boilerplate.ejs") %>
 <body>
-    <h1>All Listings</h1>
-    <form method="GET" action="/listings/new">
+  <h1>All Listings</h1>
+  <!-- <form method="GET" action="/listings/new">
         <button>Create New Listing</button>
-    </form>
-    <ul>
-        <% for(let listing of allListings) { %>
-            <li>
-                <a href="/listings/<%= listing._id %>"> <%= listing.title %> </a>
-            </li>
-        <% } %>
-    </ul>
+    </form> -->
+  <% for(let listing of allListings) { %>
+  <div class="card" style="width: 18rem">
+    <img
+      src="<%= typeof listing.image === 'object' ? listing.image.url : listing.image %>"
+      class="card-img-top"
+      alt="listing_image"
+    />
+    <div class="card-body">
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk
+        of the card’s content.
+      </p>
+    </div>
+  </div>
+  <% } %>
+
+  <!-- <ul>
+    <% for(let listing of allListings) { %>
+    <li>
+      <a href="/listings/<%= listing._id %>"> <%= listing.title %> </a>
+    </li>
+    <% } %>
+  </ul> -->
 </body>
-</html>
