--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,10 +18,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <%- include("../includes/navbar.ejs") %>
-    
+
     <div class="container"><%- body %></div>
 
     <%- include("../includes/footer.ejs") %>
