made some changes in the css and show.ejs file, also added the Readme file content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,7 +111,7 @@ body {
 
 /* NEW PAGE */
 
-.add-btn, .edit-btn {
+.add-btn, .edit-btn, .delete-btn {
   background-color: #fe424d !important;
   border: none !important;
 }
