--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -32,7 +32,7 @@
       action="/listings/<%= listing._id %>?_method=DELETE"
       onsubmit="return confirm('Are you sure you want to delete this listing?');"
     >
-      <button class="btn btn-dark offset-5">Delete</button>
+      <button class="btn btn-dark offset-5 delete-btn">Delete</button>
     </form>
   </div>
 </div>
