--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,10 +2,9 @@
 
 <div class="row">
   <div class="col-8 offset-3">
-    <h3>Listing Details</h3>
+    <h3><%= listing.title %></h3>
   </div>
-
-  <div class="card col-6 offset-3 show-card">
+  <div class="card col-6 offset-3 show-card listing-card">
     <img
       src="<%= listing.image && listing.image.url ? listing.image.url : listing.image %>"
       class="card-img-top show-img"
@@ -13,20 +12,20 @@
     />
     <div class="card-body">
       <p class="card-text">
-        <b><%= listing.title %></b><br />
         <%= listing.description %><br />
         &#8377; <%= listing.price.toLocaleString("en-IN") %> /night <br />
-        <%= listing.location %><br />
-        <%= listing.country %><br />
+        <%= listing.location %> <br />
+        <%= listing.country %>
       </p>
     </div>
   </div>
-  <br />
   <div class="btns">
-    <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">
+    <a
+      href="/listings/<%= listing._id %>/edit"
+      class="btn btn-dark col-1 offset-3 edit-btn"
+    >
       Edit</a
     >
-
     <form
       method="POST"
       action="/listings/<%= listing._id %>?_method=DELETE"
@@ -35,4 +34,68 @@
       <button class="btn btn-dark offset-5 delete-btn">Delete</button>
     </form>
   </div>
+  <div class="col-8 offset-3 mb-3">
+    <hr />
+    <h4>Leave a Review</h4>
+    <form
+      action="/listings/<%= listing._id %>/reviews"
+      method="POST"
+      novalidate
+      class="needs-validation"
+    >
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input
+          type="range"
+          min="1"
+          max="5"
+          id="rating"
+          name="review[rating]"
+          class="form-range"
+        />
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment">Comments</label>
+        <textarea
+          name="review[comment]"
+          id="comment"
+          cols="30"
+          rows="5"
+          class="form-control"
+          placeholder="Write your review here..."
+          required
+        ></textarea>
+        <div class="invalid-feedback">
+          Please provide a comment for your review.
+        </div>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+    <hr class="my-4" />
+
+    <p><b> All Reviews</b></p>
+
+    <div class="row">
+      <% for (let review of listing.reviews) { %>
+
+      <div class="card col-5 ms-3 mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Jack Chan</h5>
+          <p class="card-text"><%= review.comment %></p>
+          <p class="card-text"><%= review.rating %> stars</p>
+
+          <form
+            action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+            method="POST"
+            class="mb-3"
+          >
+            <button class="btn btn-outline-dark">Delete</button>
+          </form>
+        </div>
+      </div>
+      <% } %>
+    </div>
+  </div>
 </div>
+
+<br />
