--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -15,6 +15,16 @@
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Add new listing</a>
       </div>
+
+      <div class="navbar-nav ms-auto">
+        <% if (currUser) { %>
+        <span class="navbar-text me-2">Welcome, <%= currUser.username %>!</span>
+        <a class="nav-link" href="/logout">Logout</a>
+        <% } else { %>
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/signup">SignUp</a>
+        <% } %>
+      </div>
     </div>
   </div>
 </nav>
