Added the cloudinary configuration in the application, and made the necessary changes for the same, also added a package named multer

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -15,7 +15,7 @@
           alt="listing_image"
           style="height: 20rem"
         />
-        <div class="card-image-overlay">Overlay Text Here</div>
+        <div class="card-image-overlay"></div>
         <div class="card-body">
           <p class="card-text">
             <b><%= listing.title %></b><br />
