--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,7 @@
   <div class="col-8 offset-2">
     <h1>Create New Listing</h1>
     <br />
-    <form method="POST" action="/listings" novalidate class="needs-validation">
+    <form method="POST" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="title" class="form-label">Title:</label>
         <input
@@ -32,13 +32,22 @@
         <div class="invalid-feedback">Please fill out this field</div>
       </div>
 
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <label for="image" class="form-label">Image URL:</label>
         <input
           name="listing[image]"
           type="text"
           class="form-control"
           placeholder="Paste an image URL (e.g. https://...)"
+        />
+      </div> -->
+
+      <div class="mb-3">
+        <label for="image" class="form-label"> Upload Listing Image: </label>
+        <input
+          name="listing[image]"
+          type="file"
+          class="form-control"
         />
       </div>
 
