Added the geocoding functionality in the application, used mapBox for this functionality

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -23,13 +23,18 @@
       rel="stylesheet"
     />
     <link href="/css/rating.css" rel="stylesheet" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.js"></script>
   </head>
   <body>
     <%- include("../includes/navbar.ejs") %>
 
     <div class="container">
-      <%- include("../includes/flash.ejs") %>
-      <%- body %></div>
+      <%- include("../includes/flash.ejs") %> <%- body %>
+    </div>
 
     <%- include("../includes/footer.ejs") %>
 
