--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,5 +1,9 @@
 <% layout("/layouts/boilerplate.ejs") %>
 
+<script>
+  const mapToken = "<%= process.env.MAP_TOKEN %>";
+</script>
+
 <div class="row">
   <div class="col-8 offset-3">
     <h3><%= listing.title %></h3>
@@ -43,8 +47,8 @@
   <% } %>
 
   <div class="col-8 offset-3 mb-3">
-    <hr />
     <% if(currUser){ %>
+    <hr />
     <h4>Leave a Review</h4>
     <form
       action="/listings/<%= listing._id %>/reviews"
@@ -52,19 +56,6 @@
       novalidate
       class="needs-validation"
     >
-      <!-- <div class="mb-3 mt-3">
-        <label for="rating" class="form-label">Rating</label>
-
-        <input
-          type="range"
-          min="1"
-          max="5"
-          id="rating"
-          name="review[rating]"
-          class="form-range"
-        />
-      </div> -->
-
       <div class="mb-3 mt-3">
         <label for="rating" class="form-label">Rating</label>
         <fieldset class="starability-slot">
@@ -134,9 +125,9 @@
     <% } %>
     <hr class="my-4" />
 
-    <p><b> All Reviews</b></p>
-
+    <% if(listing.reviews.length > 0) { %>
     <div class="row">
+      <p><b> All Reviews</b></p>
       <% for (let review of listing.reviews) { %>
 
       <div class="card col-5 ms-3 mb-3">
@@ -159,7 +150,16 @@
       </div>
       <% } %>
     </div>
+    <% } %>
+  </div>
+
+  <div class="col-6 offset-3 mb-3">
+    <h3>Where you'll be</h3>
+    <div id="map"></div>
   </div>
 </div>
 
+<script src="/js/map.js" ></script>
+
 <br />
+  
