completed the phase 3 of the project and added the map popup and marker functionality in the application

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,6 +2,7 @@
 
 <script>
   const mapToken = "<%= process.env.MAP_TOKEN %>";
+  const listing = "<%- JSON.stringify(listing) %>";
 </script>
 
 <div class="row">
@@ -159,7 +160,6 @@
   </div>
 </div>
 
-<script src="/js/map.js" ></script>
+<script src="/js/map.js"></script>
 
 <br />
-  
