--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,6 +4,7 @@
   #filters {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
   }
   .filter {
     text-align: center;
@@ -19,6 +20,20 @@
 
   filter p {
     font-size: 0.8rem;
+  }
+
+  .tax-info {
+    display: none;
+  }
+
+  .tax-toggle {
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.25rem;
+    padding: 1rem;
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
   }
 </style>
 
@@ -181,7 +196,8 @@
       <div class="card-body">
         <p class="card-text">
           <b><%= listing.title %></b><br />
-          &#8377;<%= listing.price %> /night
+          &#8377;<%= listing.price.toLocaleString("en-IN") %> /night
+          <i class="tax-info">&nbsp;&nbsp; +18% GST</i>
         </p>
       </div>
     </div>
@@ -195,6 +211,14 @@
     "flexSwitchCheckDefault"
   );
   taxSwitch.addEventListener("click", () => {
-    console.log("Switch clicked");
+    let taxInfo = document.getElementsByClassName(".tax-info");
+    for(info of taxInfo){
+      // info.style.display = taxSwitch.checked ? "inline" : "none";
+      if(info.style.display != inline){
+        info.style.display = "inline";
+      } else {
+        info.style.display = "none";  
+      }
+    }
   })
 </script>
