--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
   .search-btn {
     background-color: #fe424d;
     color: white;
@@ -6,7 +6,7 @@
     padding: 0 1rem 0 1rem;
   }
 
-  .search-btn :hover{
+  .search-btn :hover {
     background-color: #fe424d;
     color: white;
   }
@@ -21,13 +21,16 @@
     padding: 0.5rem 3rem 0.5rem 3rem;
     font-size: 1rem;
   }
-</style>
+</style> -->
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"
       ><i class="fa-regular fa-compass"></i
     ></a>
+    <div class="navbar-nav web-title">
+      <a class="nav-link" id="web-title" href="/listings"><b>WanderLust</b></a>
+    </div>
     <button
       class="navbar-toggler"
       type="button"
@@ -37,22 +40,29 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/listings">Explore</a>
-      </div>
-      <div class="navbar-nav ms-auto>
-        <form class="d-flex" role="search">
+      <div class="nav-search">
+        <form
+          class="d-flex"
+          role="search"
+          action="/listings/search"
+          method="get"
+          id="searchBox"
+        >
           <input
-            class="form-control me-2 search-inp"
+            class="form-control search-inp"
             type="search"
-            placeholder="Search destinations"
+            placeholder="Search Location | Title | Price"
+            aria-label="Search"
+            name="q"
+            id="mySearchInput"
           />
-          <button class="btn search-btn" type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            Search</button>
+          <button class="btn search-btn" type="submit" id="search">
+            <i class="fa-solid fa-magnifying-glass"></i>Search
+          </button>
         </form>
       </div>
-      <div class="navbar-nav ms-auto">
+
+      <div class="navbar-nav">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
         <% if (currUser) { %>
         <span class="navbar-text me-2">Welcome, <%= currUser.username %>!</span>
